cursive-bootstrap/tests/ui/E-CON/E-CON-0096.cursive
// RUN: compile-fail
// DIAG: E-CON-0096
// SPEC: 8.9
// DESC: Memory ordering in speculative block

record Counter {
    value: i32
}

procedure ordering_speculative(c: shared Counter) -> () {
    # speculative write c {
        atomic_fence(SeqCst)  //~ ERROR E-CON-0096: memory ordering in speculative
        c.value = 10
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
